--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>My Favorite Web Page</title>
+  <title>Jaden Hawkins Webpage</title>
 </head>
 <body style="font-family: Verdana, sans-serif; margin-left: 10%; margin-right: 10%">
 
