--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <h1>Jaden Hawkins Webpage</h1>
 
   <p align="center">
-  This page is pretty boring now, <b>but <font size="+1">just <font size="+2">you <font color="#FF33CC">wait</font>!</font></font></b>
+  I go to the <font color="#FFA500">University of Virginia</font>!</font></font></b>
   </p>
 
-</from Nike>
-  <svg aria-hidden="true" class="pre-logo-svg" focusable="false" viewBox="0 0 24 24" role="img" width="24px" height="24px" fill="none"><path fill="currentColor" fill-rule="evenodd" d="M21 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z" clip-rule="evenodd"></path></svg>
+</from uva>
+<img width="540" height="439" src="https://storage.googleapis.com/virginiasports-com/2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb.png" alt="Virginia Cavaliers Official Athletic Site" srcset="https://storage.googleapis.com/virginiasports-com/2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb.png 540w, https://storage.googleapis.com/virginiasports-com/2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb-300x244.png 300w" sizes="(max-width: 540px) 100vw, 540px" data-image-size="full" data-stateless-media-bucket="virginiasports-com" data-stateless-media-name="2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb.png" class="custom-logo wp-stateless-item">
   
 </body>  
 </html>
