--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <html>
 <head>
-  <title>Jaden Hawkins Webpage</title>
-</head>
-<body style="font-family: Verdana, sans-serif; margin-left: 10%; margin-right: 10%">
+<body style="font-family: Futura, serif; margin-left: 10%; margin-right: 10%">
 
-  <h1>Jaden Hawkins Webpage</h1>
-
-  <p align="center">
-  I go to the <font color="#FFA500">University of Virginia</font>!</font></font></b>
+  <h1>Welcome to My Web Page</h1>
+<p>
+  <u>I have not the slightest idea how to code, so much of what I am doing here is learned from other people's webpages
+  </u></p>
+  
+<p align="center">
+  I am a photographer and graphic designer for <font color="#FFA500"> the University of Virginia Basketball Team
   </p>
 
-</from uva>
-<img width="540" height="439" src="https://storage.googleapis.com/virginiasports-com/2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb.png" alt="Virginia Cavaliers Official Athletic Site" srcset="https://storage.googleapis.com/virginiasports-com/2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb.png 540w, https://storage.googleapis.com/virginiasports-com/2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb-300x244.png 300w" sizes="(max-width: 540px) 100vw, 540px" data-image-size="full" data-stateless-media-bucket="virginiasports-com" data-stateless-media-name="2020/06/1c6dc67b-vsabre_fororangebackground_fullcolor_rgb.png" class="custom-logo wp-stateless-item">
+  <p align="center">
+    To see some of my work on their page, <a href="https://www.instagram.com/uvamenshoops/?hl=en" target="_blank">click here</a> 
+    Placeholder image
+  </p>
+
   
-</body>  
-</html>
+  <center>
+    <a href="watermelon.jpg"><img width="80%" src="watermelon.jpg"></a>
+  </center>
+
+
+</body>
