--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   
   <center>
-    <a href="watermelon.jpg"><img width="80%" src="watermelon.jpg"></a>
+    <a href="7H3A5360.jpg"><img width="80%" src="7H3A5360.jpg"></a>
   </center>
 
 
