--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   </p>
 
   <p align="center">
-    To see some of my work on their page, <a href="https://www.instagram.com/uvamenshoops/?hl=en" target="_blank">click here</a> 
-    Placeholder image
+    <font color="#000080">
+    To see some of my work on their page, <font color="#ffc00"><a href="https://www.instagram.com/uvamenshoops/?hl=en" target="_blank">click here</a> 
+ 
   </p>
 
   
