--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   <p align="center">
     <font color="#000080">
     To see some of my work on their page, <font color="#ffc00"><a href="https://www.instagram.com/uvamenshoops/?hl=en" target="_blank">click here</a> 
- 
   </p>
 
+<p align="center">
+      <font color="#000000">
+  Here is a photo I took at our game against Notre Dame
+  </p>
   
   <center>
     <a href="7H3A5360.jpg"><img width="80%" src="7H3A5360.jpg"></a>
