--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <h1>Welcome to My Web Page</h1>
 <p>
+<!-- Underlined text -->
   <u>I have not the slightest idea how to code, so much of what I am doing here is learned from other people's webpages
   </u></p>
   
