--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<html>
+<head>
+<!-- changed font style -->
+<body style="font-family: Futura, serif; margin-left: 10%; margin-right: 10%">
+
+  <h1>Welcome to My Web Page</h1>
+<p>
+<!-- Underlined text -->
+  <u>I have not the slightest idea how to code, so much of what I am doing here is learned from other people's webpages
+  </u></p>
+  
+<p align="center">
+<!-- added style using font color feature -->
+  I am a photographer and graphic designer for <font color="#FFA500"> the University of Virginia Basketball Team
+  </p>
+
+
+
+</body>
 
