--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <html>
-<head></head>
+
+<head><title>Jaden H Webpage </title>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.container {
+  position: relative;
+  text align: center;
+  color: white;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
+</head>
 
   
 <!-- changed font style -->
@@ -16,7 +36,10 @@
   I am a photographer and graphic designer for <font color="#FFA500"> the University of Virginia Basketball Team
   </p>
 
-
+  <div class="container"> 
+    <img src="7H3A5360.jpg">
+    <div class="centered">January 31, 2024</div>
+  </div>
 
   
 </body>
