--- a/index.html
+++ b/index.html
@@ -15,8 +15,27 @@
   
 <p align="center">
 <!-- added style using font color feature -->
-  I am a photographer and graphic designer for <font color="#FFA500"> <font size/"+50"> the University of Virginia Basketball Team
+  I am a photographer and graphic designer for <font color="#FFA500">the University of Virginia Basketball Team
   </p>
+
+<p align="center">
+<table border="1">
+    <thead>
+      <tr>
+      <th> Name </th>
+      <th> Age </th>
+      <th> Hometown </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Jaden Hawkins</td>
+        <td>19</td>
+        <td>Chesapeake, VA</td>
+      </tr>
+    </tbody>
+  </table>
+   </p>
 
 </body>
 
