--- a/index.html
+++ b/index.html
@@ -37,5 +37,12 @@
   </table>
    </p>
 
+<a href="photos.html">Here are some of my photos</a>
+<p align="center">
+    <font color="#000080">
+    To see some of my work on UVA's page, <font color="#ffc00"><a href="https://www.instagram.com/uvamenshoops/?hl=en" target="_blank">click here</a> 
+  </p>
+
+
 </body>
 
