--- a/photos.html
+++ b/photos.html
@@ -1,1 +1,15 @@
+  <center>
+    <a href="7H3A5360.jpg"><img width="80%" src="7H3A5360.jpg"></a>
+  </center>
+  <center>
+    <a href="733A4997.jpg"><img width="80%" src="733A4997.jpg"></a>
+  </center>
+  <center>
+    <a href="7H3A5556.jpg"><img width="80%" src="7H3A5556.jpg"></a>
+  </center>
+  <center>
+    <a href="7H3A5581.jpg"><img width="80%" src="7H3A5581.jpg"></a>
+  </center>
+
+<a href="index.html">Return to Homepage</a>
 
