--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
   </table>
    </p>
 
-
+<p align="center">
+  href="photos.html">Here are some of my photos
+</p>
+  
 <p align="center">
   href="photos.html">Here are some of my photos I've taken at basketball games
     <font color="#000080">
