--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    </p>
 
 <p align="center">
-  href="photos.html">Here are some of my photos
+<a href="photos.html">Click here to view some photos I've taken at basketball games</a>
 </p>
   
 <p align="center">
