--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <th> Name </th>
       <th> Age </th>
       <th> Hometown </th>
+      <th> Major </th>
+      <th> Height </th>
+        
       </tr>
     </thead>
     <tbody>
@@ -32,6 +35,8 @@
         <td>Jaden Hawkins</td>
         <td>19</td>
         <td>Chesapeake, VA</td>
+        <td>Media Studies</td>
+        <td>6'5" (minus 6 inches)</td>
       </tr>
     </tbody>
   </table>
