--- a/photos.html
+++ b/photos.html
@@ -1,4 +1,8 @@
-  <center>
+<head><title>Jaden H Photos </title>
+  <link rel="stylesheet" href="/style.css" type="text/css">
+</head>
+
+<center>
     <a href="7H3A5360.jpg"><img width="80%" src="7H3A5360.jpg"></a>
   </center>
   <center>
