--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 
 <head><title>Jaden H Webpage </title>
   <link rel="stylesheet" href="/style.css" type="text/css">
+  h1 {
+  color: blue;
+  background-color: orange;
+  font-size: large;
+}
+body {
+  font-family: Futura, sans-serif;
+  margin-left: 10%;
+  margin-right: 10%;
+}
 </head>
 
-  
-<!-- changed font style -->
-<body style="font-family: Futura, serif; margin-left: 10%; margin-right: 10%">
 
   <h1>Welcome to My Web Page</h1>
 <p>
