--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 
 <head><title>Jaden H Webpage </title>
   <link rel="stylesheet" href="/style.css" type="text/css">
+<style>
   h1 {
   color: blue;
-  background-color: orange;
+  background-color: dodgerblue;
   font-size: large;
 }
 body {
   font-family: Futura, sans-serif;
   margin-left: 10%;
   margin-right: 10%;
+  </style>
 }
 </head>
 
