--- a/index.html
+++ b/index.html
@@ -56,11 +56,22 @@
     <script>
         var i = 10;
 
-        function updateCount() {
-            i = i - 1;
-            countobj = document.getElementById("count");
-            console.log("Updating object: " + countobj);
-            countobj.innerHTML = "<b>" + i + "</b>";
+function displayCount(counter){
+countobj = document.getElementById("count");
+            countobj.innerHTML = "<b>" + counter + "</b>";
+}
+
+function updateCount() {
+i = i - 1;
+}
+        
+displayCount(10)
+
+if ( i < 1 ){
+document.body.style.backgroundColor = “FF2258”;
+countobj.innerHTML = “<b><font size = ‘+10’>BANG!</b>”;
+}
+
 
          if (i < 1) 
             countobj.style.color = "#fad1d0"
