--- a/index.html
+++ b/index.html
@@ -59,8 +59,18 @@
             console.log("Updating i: " + i);
             countobj.innerHTML = "<b>" + i + "</b>";
 
-            if (i <= 0) { 
-                countobj.innerHTML = "<b><font size='+5'>BOOM!</b>";
+           if (i < 1) 
+            countobj.style.color = "#fad1d0"
+        if (i < 0)
+            countobj.style.color = "f1807e"
+         if (i < -5)
+            countobj.style.color = "FF0000"
+          if (i < -10)
+            countobj.style.color = "680300"
+          if (i < -15)
+            countobj.style.color = "240100"
+
+               
             }
 
         }
