--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
     To see some of my work on UVA's page, <font color="#ffc00"><a href="https://www.instagram.com/uvamenshoops/?hl=en" target="_blank">click here</a> 
 
 </p>
+        <script>
+        int redValue = 0;
+
+        function makeRedder() {
+            redValue += 1;
+            if (redValue > 255) {
+                redValue = 255;
+                clearInterval(colorInterval);
+            }
+            document.body.style.backgroundColor = `rgb(${redValue}, 0, 0)`;
+        }
+
 
     <script>
         function updateCount() {
@@ -58,6 +70,7 @@
             countobj = document.getElementById("count");
             console.log("Updating i: " + i);
             countobj.innerHTML = "<b>" + i + "</b>";
+            makeRedder();
 
            if (i < 1) 
             countobj.style.color = "#fad1d0"
