--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 </p>
         <script>
-        int redValue = 0;
+        let redValue = 0;
 
         function makeRedder() {
             redValue += 1;
