--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             }
             document.body.style.backgroundColor = `rgb(${redValue}, 0, 0)`;
         }
+        </script>
 
 
     <script>
