--- a/index.html
+++ b/index.html
@@ -87,11 +87,19 @@
     <h2> Count Down: <span id="count"><script>document.write(i)</script></span></h2>
     <button onclick="updateCount()">Next</button>
 
+    function enlargeText(){
+        
+        }
+        
+    <h3> New Button: <span id="Enlarge Me"><script>document.write(i)</script></span></h3>
+    <button onclick="enlargeText()">Next</button>
 
 
-<h3>
+
+
+<h4>
 <img src="7H3A4997.jpg" style="width:100%">   
-    </h3>
+    </h4>
 
 </body>
 
