--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
     <h3>
         <button onclick="this.nextElementSibling.style.fontSize = (parseInt(window.getComputedStyle(this.nextElementSibling).fontSize) + 1) + 'px'">Enlarge</button>
-<span style="font-size: 16px">Text to enlarge</span>
-    </h3>h3>
+<span style="font-size: 20px">Enlarge Me</span>
+    </h3>
 
 
 
