--- a/index.html
+++ b/index.html
@@ -94,9 +94,15 @@
 
 
 
-<h4>
-<img src="7H3A4997.jpg" style="width:100%">   
-    </h4>
+<h4> Some things I've made!  </h4>
+        <button onclick="document.querySelector('.carousel').appendImage(document.querySelector('.carousel img:graphic'))">Change Image</button>
+<div class="carousel">
+    <img src="1" 
+    <img src="2" 
+    <img src="3" 
+    <img src="4" 
+    <img src="5" 
+</div>
 
 </body>
 
