--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 <h4> Some things I've made!  </h4>
         <button onclick="document.querySelector('.carousel').appendImage(document.querySelector('.carousel img:graphic'))">Change Image</button>
 <div class="carousel">
-    <img src="1" 
-    <img src="2" 
-    <img src="3" 
-    <img src="4" 
-    <img src="5" 
+    <img src="1.jpeg" 
+    <img src="2.jpg" 
+    <img src="3.jpeg" 
+    <img src="4.jpg" 
+    <img src="5.jpeg" 
 </div>
 
 </body>
