--- a/index.html
+++ b/index.html
@@ -95,7 +95,14 @@
 
 
 <h4> Some things I've made!  </h4>
-        <button onclick="document.querySelector('.carousel').appendImage(document.querySelector('.carousel img:graphic'))">Change Image</button>
+
+<style>
+    .carousel img {
+        width: 40px; 
+        height: auto; 
+    }
+</style>
+<button onclick="document.querySelector('.carousel').appendImage(document.querySelector('.carousel img:graphic'))">Change Image</button>
 <div class="carousel">
     <img src="1.jpeg" 
     <img src="2.jpg" 
