--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 
 <style>
     .carousel img {
-        width: 40px; 
+        width: 300px; 
         height: auto; 
     }
 </style>
-<button onclick="document.querySelector('.carousel').appendImage(document.querySelector('.carousel img:graphic'))">Change Image</button>
+<button onclick="document.querySelector('.carousel').appendImage(document.querySelector('.carousel img:graphic').cloneNode(true)); document.querySelector('.carousel img:graphic').remove();">Change Image</button>
 <div class="carousel">
     <img src="1.jpeg" 
     <img src="2.jpg" 
