--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             countobj.innerHTML = "<b>" + i + "</b>";
 
             if (i <= 0) { 
-                countobj.innerHTML = "<b><em><font size='+5'>BOOM!</b></em>";
+                countobj.innerHTML = "<b><em><font size='+5'>Kaboom!</b></em>";
                      countobj.style.color = "black"
             }
 
