--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             if (i <= 0) { 
                 countobj.innerHTML = "<b><em><font size='+5'>Kaboom!</b></em>";
-                     countobj.style.color = "black"
+                     countobj.style.color = "white"
             }
 
            if (i < 5) 
