--- a/index.html
+++ b/index.html
@@ -94,22 +94,28 @@
 
 
 
-<h4> Some things I've made!  </h4>
+<h4> Virginia basketball graphics </h4>
+ <img id="cimage" height="600" src="" alt="Image Changes">
+images = ['1.jpeg'
+          '2.jpg'
+          '3.jpeg'
+          '4.jpg'
+          '5.jpeg']
+var carouselImage = document.getElementById("cimage");
+<button onclick="updateCount()">Next Image</button>
 
-<style>
-    .carousel img {
-        width: 300px; 
-        height: auto; 
-    }
-</style>
+<script>
+var i = 0;
+function updateCount(){
+    i = i + 1;
+    carouselImage.src = images[i]
+    if i > 4
+    i = 0
+</script>
 
-<div class="carousel">
-    <img src="1.jpeg" 
-    <img src="2.jpg" 
-    <img src="3.jpeg" 
-    <img src="4.jpg" 
-    <img src="5.jpeg" 
-</div>
+
+
+
 
 </body>
 
