--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
 <h4> Virginia basketball graphics </h4>
  <img id="cimage" height="600" src="" alt="Image Changes">
-images = ['1.jpeg'
-          '2.jpg'
-          '3.jpeg'
-          '4.jpg'
-          '5.jpeg']
+images = ["1.jpeg"
+          "2.jpg"
+          "3.jpeg"
+          '4.jpg"
+          "5.jpeg"]
 var carouselImage = document.getElementById("cimage");
 <button onclick="updateCounter()">Next Image</button>
 
