--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
 
 <h4> Virginia basketball graphics </h4>
 <img id="cimage" height="600" src="" alt="Image Changes">
-images = ["1.jpeg"
-          "2.jpg"
-          "3.jpeg"
-          '4.jpg"
+images = ["1.jpeg",
+          "2.jpg",
+          "3.jpeg",
+          '4.jpg",
           "5.jpeg"]
 
 
 var carouselImage = document.getElementById("cimage");
+        
 <button onclick="updateCounter()">Next Image</button>
 
 <script>
