--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <h4> Virginia basketball graphics </h4>
-<img id="cimage" height="600" src="carouselImage" alt="Image Changes">
+<img id="cimage" height="600" src="images" alt="Image Changes">
 images = ["1.jpeg",
           "2.jpg",
           "3.jpeg",
