--- a/index.html
+++ b/index.html
@@ -91,28 +91,19 @@
 
 
 
-<h4> Virginia basketball graphics </h4>
-<img id="cimage" height="600" src="images" alt="Image Changes">
-images = ["1.jpeg",
-          "2.jpg",
-          "3.jpeg",
-          '4.jpg",
-          "5.jpeg"]
-
-
-var carouselImage = document.getElementById("cimage");
-        
-<button onclick="updateCounter()">Next Image</button>
-
+<h4>Virginia basketball graphics</h4>
+<img id="cimage" height="600" src="images/1.jpeg" alt="Image Changes">
 <script>
-var i = 0;
-function updateCounter(){
-    i = i + 1;
-    carouselImage.src = images[i]
-    if i > 4
-    i = 0
-</script>
+    var images = ["images/1.jpeg", "images/2.jpg", "images/3.jpeg", "images/4.jpg", "images/5.jpeg"];
+    var i = 0;
+    var carouselImage = document.getElementById("cimage");
 
+    function updateCounter() {
+        i = (i + 1) % images.length; // Use modulus to loop back to the start
+        carouselImage.src = images[i];
+    }
+</script>
+<button onclick="updateCounter()">Next Image</button>
 
 
 
