--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <h4>Virginia basketball graphics</h4>
 <img id="cimage" height="600" src="images/1.jpeg" alt="Image Changes">
 <script>
-    var images = ["images/1.jpeg", "images/2.jpg", "images/3.jpeg", "images/4.jpg", "images/5.jpeg"];
+    var images = [1.jpeg", "2.jpg", "3.jpeg", "4.jpg", "5.jpeg"];
     var i = 0;
     var carouselImage = document.getElementById("cimage");
 
