--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <h4>Virginia basketball graphics</h4>
-<img id="cimage" height="600" src="images/1.jpeg" alt="Image Changes">
+<img id="cimage" height="600" src="1.jpeg" alt="Image Changes">
 <script>
     var images = [1.jpeg", "2.jpg", "3.jpeg", "4.jpg", "5.jpeg"];
     var i = 0;
