--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
     var carouselImage = document.getElementById("cimage");
 
     function updateCounter() {
-        i = (i + 1) % images.length; // Use modulus to loop back to the start
+        i = (i + 1); // Use modulus to loop back to the start
+        if (i > 4)
+        i = 0;
         carouselImage.src = images[i];
     }
 </script>
