--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     }
 </script>
 <button onclick="nextImage()">Next Image</button>
+<button onclick="previousImage()">Previous Image</button>
 
         
 
