--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         i = (i - 1); // Use modulus to loop back to the start
         if (i < 0)
         i = 4;
-        carouselImage.src = images[j];
+        carouselImage.src = images[i];
     }
 </script>
 <button onclick="nextImage()">Next Image</button>
