--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
         if (i < 0)
         i = 4;
         carouselImage.src = images[i];
+
+     function nextImage() {
+        i = (i + 1); // Use modulus to loop back to the start
+        if (i > 4)
+        i = 0;
+        carouselImage.src = images[i];
     }
 </script>
 <button onclick="nextImage()">Next Image</button>
