--- a/index.html
+++ b/index.html
@@ -100,23 +100,20 @@
     var carouselImage = document.getElementById("cimage");
 
     function previousImage() {
-        i = (i - 1); // Use modulus to loop back to the start
+        i = (i - 1);
         if (i < 0)
         i = 4;
         carouselImage.src = images[i];
 
      function nextImage() {
-        i = (i + 1); // Use modulus to loop back to the start
+        i = (i + 1); 
         if (i > 4)
         i = 0;
         carouselImage.src = images[i];
     }
 </script>
-<button onclick="nextImage()">Next Image</button>
-
-
         
-
+<button onclick="nextImage()">Next Image</button
 
 
 
