--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
         i = 4;
         carouselImage.src = images[i];
     }
-     function nextImage() {
-        i = (i + 1); 
-        if (i > 4)
-        i = 0;
+   function nextImage() {
+        i = (i + 1) % images.length; 
         carouselImage.src = images[i];
-    }
+   }
+    
 </script>
         
 <button onclick="nextImage()">Next Image</button
